# FormuMind

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.eln.yml  docker-compose.host.yml  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  bus.py  chemist.py  inspector.py  rules.py  supervisor.py
backend/app/api/: agents.py  auth.py  chat.py  chemistry.py  dependencies.py  doe.py  experiments.py  formulations.py  ingest.py  intent.py  ip_analysis.py  kb.py  kg.py  loop.py  meta.py  notebooklm.py  optimize.py  process_optimize.py  projects.py  qc.py  research.py  search.py  settings.py  tasks.py
backend/app/db/: __init__.py  campaign_store.py  campaign_types.py  chunk_store.py  database.py  datalab_client.py  entity_store.py  migrate.py  models.py  product_store.py  project_store.py  session_utils.py  source_store.py  store.py
backend/app/domain/: chat_schemas.py  chemistry.py  doe.py  features.py  formulation_gate.py  kg_schemas.py  knowledge.py  levers.py  objective_contract.py  project_spec.py  project_workspace.py  research_query.py  schemas.py  tradeoff_schemas.py
backend/app/domain/examples/: __init__.py
backend/app/middleware/: __init__.py  api_auth.py  rate_limit.py
backend/app/pipeline/: claim_checker.py  reconstruct.py  research_graph.py  workflow.py
backend/app/resources/: kg_elements.json
backend/app/services/: active_learning.py  auto_loop.py  chat_claims.py  chat_clarify.py  chat_context.py  chat_structured.py  chem_extract.py  chemical_lookup.py  chemtools.py  chunking.py  colbert_store.py  colorimetry.py  compounds.py  content_filter.py  dependencies.py  doe_adaptive.py  doe_anomaly.py  doe_explain.py  env_flags.py  errors.py  factor_suggest.py  federated_search.py  fulltext_fetcher.py  grounded_recommend.py  ingestion.py  intent.py  io_export.py  ip_analysis.py  kb_index.py  kb_ingest.py  knowledge_cohort.py  literature.py  llm.py  md_simulation.py  notebooklm.py  optimizer.py  parsing.py  patent_client_env.py  pdf_downloader.py  predictor.py  (+16 more)
backend/app/services/deep_research/: __init__.py  engine.py  models.py  query_expander.py
backend/app/services/engines/: __init__.py  baybe_engine.py  campaign_objectives.py  doe_registry.py  native_doe_engine.py  pydoe_engine.py
backend/app/services/engines/adapters/: __init__.py  baybe_objective_builder.py  baybe_space_builder.py  doe_adapter.py  measurements_adapter.py
backend/app/services/kg/: __init__.py  element_map.py  entity_linker.py  entity_resolver.py  graph_query.py  prompts.py  relation_extractor.py  retrieval.py
backend/app/services/property/: __init__.py  metric_prior.py  registry.py
backend/app/worker/: celery_app.py  task_progress.py  tasks.py
backend/scripts/: fix_exception_imports.py  refactor_exceptions.py
backend/tests/: conftest.py  redis_helpers.py  test_agents.py  test_api.py  test_api_auth.py  test_auto_loop.py  test_baybe_campaign_objectives.py  test_baybe_engine.py  test_baybe_space_builder.py  test_campaign_schema_migration.py  test_campaign_store_datalab.py  test_campaign_store_sync.py  test_chat_clarify.py  test_chat_compat.py  test_chat_context.py  test_chat_structured.py  test_chem_extract.py  test_chem_parsing.py  test_chem_qa.py  test_chemcrow_doe_data.py  test_chemcrow_recommend.py  test_chemcrow_retrieval.py  test_chemistry.py  test_chemistry_lookup.py  test_chemtools.py  test_chunk_max_depth.py  test_claim_checker.py  test_colbert_store.py  test_colorimetry.py  test_config.py  test_constraint_prompt.py  test_content_filter.py  test_datalab_eln.py  test_datalab_payload_contract.py  test_db.py  test_deep_research_phase1.py  test_dependencies.py  test_doe.py  test_doe_adaptive.py  test_doe_engines.py  (+74 more)
backend/tests/fixtures/: golden_queries.json
deploy/: README.md
deploy/eln/: README.md
deploy/k8s/: README.md  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  nginx-sse-snippet.conf  postgres.yaml  pvc.yaml  redis.yaml  (+2 more)
docs/: QUICKSTART.md  USER_GUIDE.md  使用指南.md  快速入门.md
frontend/: Dockerfile  index.html  nginx.conf  nginx.host.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: bootstrap-frontend.sh  deploy-docker.sh  e2e_mg_passivation.py  inspect_dom.py  install.sh  smoke_test.py  take_extra_screenshots.py  take_loop_screenshot.py  take_screenshots.py  test_search_stream_live.py
(+61 files in other folders)
