[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formumind-backend"
version = "0.1.0"
description = "FormuMind — AI-assisted formulation R&D platform for metal surface treatment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.9",
    "celery>=5.3",
    "redis>=5.0",
    "numpy>=1.26",
    "httpx>=0.27",
]

# Heavy / optional scientific engines. These are declared but NOT required to
# run the platform: every service has a deterministic offline fallback. Install
# with `pip install -e .[heavy]` on a machine that can support them, or run the
# corresponding Docker images (see docker-compose.yml).
[project.optional-dependencies]
llm = ["anthropic>=0.25"]
science = [
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "rdkit>=2023.9",
    "ChemFormula>=1.3",
]
heavy = [
    "torch>=2.2",
    "deepchem>=2.8",
    "transformers>=4.40",
    "summit>=0.8",
    "ase>=3.22",
]
intel = [
    "patent-client>=5.0",
    "paper-qa>=4.0",
    "chemcrow>=0.3",
]
export = ["openpyxl>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
