[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "formumind-backend"
version = "0.1.0"
description = "FormuMind — AI-assisted formulation R&D platform for metal surface treatment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0",
    "celery>=5.4",
    "redis>=5.2",
    "numpy>=1.26",
    "httpx>=0.27",
]

# Heavy / optional scientific engines. These are declared but NOT required to
# run the platform: every service has a deterministic offline fallback. Install
# with `pip install -e .[heavy]` on a machine that can support them, or run the
# corresponding Docker images (see docker-compose.yml).
[project.optional-dependencies]
llm = ["anthropic>=0.25", "openai>=1.30", "google-genai>=0.7"]
science = [
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "rdkit>=2023.9",
    "ChemFormula>=1.3",
    "thermo>=0.2",          # physical-property estimation (density → VOC g/L)
]
# CPU-only, pip-installable multi-objective / Bayesian optimizer. Sits between
# the built-in numpy UCB fallback and the heavy Summit engine.
optimize = ["optuna>=3.4"]
heavy = [
    "torch>=2.2",
    "deepchem>=2.8",
    "transformers>=4.40",   # also the MoLFormer embedding path (reserved)
    "summit>=0.8",          # Bayesian/TSEMO optimization (auto-detected)
    "ase>=3.22",
]
intel = [
    "patent-client>=5.0",
    "paper-qa>=4.0",        # semantic RAG synthesis (auto-detected in chat)
    "chemcrow>=0.3,!=0.3.20",  # 0.3.20 pins openai==0.27.8, conflicts with openai>=1.30
    "pubchempy>=1.0.4",     # enrich raw-material SMILES/molar-mass from PubChem
    "arxiv>=2.1",
    "semanticscholar>=0.8",
    "ddgs>=6.0",            # renamed from duckduckgo-search
]
file_ingest = ["markitdown>=0.0.1", "pypdf>=4.0", "python-docx>=1.1"]
export = ["openpyxl>=3.1"]
# Semantic-embedding RAG upgrade: sentence-transformers + optional chromadb.
# CPU-only; no GPU required. Activates EmbeddingStore in rag.py automatically.
embedding = ["sentence-transformers>=2.6"]
# True Gaussian-process optimizer (BoTorch + gpytorch + torch CPU).
# Activates BotorchOptimizer (GP + Log-EI acquisition) in optimizer.py.
bo = ["botorch>=0.10", "gpytorch>=1.11", "torch>=2.2"]
# CIELAB / CIEDE2000 colorimetry. Pure Python, no GPU.
# Activates delta_e + lab_L/a/b metrics in the predictor.
color = ["colour-science>=0.4"]
# NotebookLM as a retrieval source (unofficial SDK; browser-session auth).
# [browser] pulls Playwright + Chromium for the one-time `notebooklm login`.
notebooklm = ["notebooklm-py[browser]>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pypdf>=4.0",             # real PDF parsing in test_pdf_downloader real-path tests
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
